--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-toastify": "^10.0.5"
   },
   "devDependencies": {
+    "daisyui": "^4.12.10",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
     "postcss": "^8",
